--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: tbtools
-Title: Not Too Much
+Title: tbtools: Pantry staples for social science
 Version: 0.0.0.9000
 Authors@R: 
     person("Tyler", "Brown", , "hi@tylerbrown.cc", role = c("aut", "cre"),
@@ -14,4 +14,5 @@ Imports:
 	zoo,
 	lmtest,
 	sandwich,
-	AER
+	AER,
+	stargazer
